# kerminal

./: .all-contributorsrc  .editorconfig  .gitignore  DATABASE_ARCHITECTURE.md  FEATURES_TODO.md  FUNDING.yml  MASTER_PASSWORD_SYSTEM.md  README.md  TODO.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  styles.css  test_kitty.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: clipboard.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  setup.rs  state.rs
src-tauri/src/commands/: ai.rs  auth_events.rs  buffer.rs  dashboard.rs  database.rs  history.rs  mod.rs  recording.rs  system.rs  terminal.rs  terminal_profile.rs
src-tauri/src/commands/database/: auth.rs  backup.rs  common.rs  external_db.rs  mod.rs  saved_command.rs  ssh.rs  sync.rs  system.rs  tunnel.rs
src-tauri/src/commands/sftp/: mod.rs
src-tauri/src/core/: auth_session_manager.rs  mod.rs  proxy.rs  title_detector.rs
src-tauri/src/core/graphics/: kitty.rs  mod.rs  sixel.rs
src-tauri/src/core/terminal/: local.rs  mod.rs  ssh.rs
src-tauri/src/database/: config.rs  error.rs  mod.rs  service.rs  traits.rs  traits_sync.rs
src-tauri/src/database/encryption/: aes.rs  device_keys.rs  external_db.rs  keychain.rs  mod.rs  (+1 more)
src-tauri/src/models/: ai.rs  base.rs  buffer.rs  mod.rs  system_info.rs  terminal.rs
src-tauri/src/services/: buffer_manager.rs  history.rs  mod.rs  ssh_config_parser.rs  terminal.rs  tunnel.rs  updater.rs
(+485 files in other folders)
