[package]
name = "kerminal"
version = "2.0.0"
description = "Modern Terminal with SSH, Tunneling & Cross-Device Sync"
license = "MIT"
repository = "https://github.com/klpod221/kerminal"
authors = ["klpod221 <klpod221@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
sysinfo = "0.37.0"
